[Feature] 仓库工具环境处理